# ChatBot

./: .env.example  .gitignore  demo.py  main.py  pyproject.toml
UI/: chat_ui.py  dev_ui.py  toeic_ui.py  ui.py
api/: llm_api.py  ollama_api.py  openai_api.py
package/: audio_recorder.py  audio_text_processor.py  audio_to_text.py  llm.py
utils/: env_reader.py  singleton.py
